[metadata]
name = pycldf
version = 1.41.1.dev0
author = Robert Forkel
author_email = robert_forkel@eva.mpg.de
description = A python library to read and write CLDF datasets
long_description = file: README.md
long_description_content_type = text/markdown
keywords = linguistics
license = Apache 2.0
license_files = LICENSE
url = https://github.com/cldf/pycldf
project_urls =
    Bug Tracker = https://github.com/cldf/pycldf/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    csvw>=1.10
    clldutils>=3.9
    uritemplate>=3.0
    python-dateutil
    # pybtex requires setuptools, but doesn't seem to declare this.
    setuptools
    pybtex
    requests
    newick
    commonnexus>=1.2.0
    python-frontmatter
    termcolor
    PyYAML
    jmespath
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
pycldf =
    components/*
    modules/*

[options.entry_points]
console_scripts =
    cldf = pycldf.__main__:main
pycldf_dataset_resolver =
    local = pycldf.ext.discovery:LocalResolver
    generic_url = pycldf.ext.discovery:GenericUrlResolver
    github = pycldf.ext.discovery:GitHubResolver

[options.extras_require]
catalogs =
    cldfcatalog
    pyglottolog
    pyconcepticon
dev =
    tox
    flake8
    wheel>=0.36
    twine
test =
    packaging
    cldfcatalog
    pyglottolog
    pyconcepticon
    pytest>=5
    pytest-mock
    requests-mock
    pytest-cov
    coverage>=4.2
docs =
    sphinx<7
    sphinx-autodoc-typehints
    sphinx-rtd-theme

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 5
testpaths = tests
addopts = --cov

[easy_install]
zip_ok = false

[coverage:run]
source =
    pycldf
    tests

[coverage:report]
show_missing = true
skip_covered = true

[tox:tox]
envlist = py3.8, py39, py310, py311, py312, py313
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
